# minimax

./: CMakeLists.txt  count-lines.py
.cache/clangd/index/: checkers.cpp.5C1E2ABC51CE541E.idx  checkers.hpp.49BB19D22FA0AE57.idx
include/: application.hpp  checkers.hpp  constants.hpp  gpuBuffer.hpp  minimax.hpp  renderer.hpp  utils.hpp
lib/: CMakeLists.txt
lib/include/: constants.hpp  gpuBuffer.hpp  initializer.hpp  shaderLoader.hpp
lib/src/: gpuBuffer.cpp  initializer.cpp  shaderLoader.cpp
shaders/: texture.frag  texture.vert
src/: application.cpp  checkers.cpp  gpuBuffer.cpp  initializer.cpp  main.cpp  minimax.cpp  renderer.cpp  shaderLoader.cpp
